force-app/main/default/objects/Torc_Constants__c/Torc_Constants__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Torc Constants</label>
</CustomObject>