force-app/main/default/objects/Torc_Constants__c/fields/Auto_Create_Qubika_Process__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Qubika_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Qubika Process</label>
    <type>Checkbox</type>
</CustomField>