force-app/main/default/objects/Torc_Constants__c/fields/AWS_Always_Query__c.field-meta.xml
<CustomField>
    <fullName>AWS_Always_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWS Always Query</label>
    <type>Checkbox</type>
</CustomField>