force-app/main/default/objects/Torc_Constants__c/fields/Check_Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_Opportunity_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Opportunity Record Type</label>
    <type>Checkbox</type>
</CustomField>