force-app/main/default/objects/Torc_Constants__c/fields/Contact_Status_Automation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Status Automation</label>
    <type>Checkbox</type>
</CustomField>