force-app/main/default/objects/Torc_Constants__c/fields/Contact_Status_Automation_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_Automation_Time__c</fullName>
    <label>Contact Status Automation Time</label>
    <type>DateTime</type>
</CustomField>