force-app/main/default/objects/Torc_Constants__c/fields/Default_Contact_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact_Recordtype__c</fullName>
    <label>Default Contact Recordtype</label>
    <length>20</length>
    <type>Text</type>
</CustomField>