force-app/main/default/objects/Torc_Constants__c/fields/Disable_Engagement_Vacation_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Engagement_Vacation_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Engagement Vacation Trigger</label>
    <type>Checkbox</type>
</CustomField>