force-app/main/default/objects/Torc_Constants__c/fields/Disable_Opportunity_Platform_Update__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Platform_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opportunity Platform Update</label>
    <type>Checkbox</type>
</CustomField>