force-app/main/default/objects/Torc_Constants__c/fields/Docusign_Special_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Special_Accounts__c</fullName>
    <label>Docusign Special Accounts</label>
    <type>TextArea</type>
</CustomField>