force-app/main/default/objects/Torc_Constants__c/fields/Engagement_Updator__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Updator__c</fullName>
    <label>Engagement Updator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>