force-app/main/default/objects/Torc_Constants__c/fields/Envelop_Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Envelop_Object_Prefix__c</fullName>
    <label>Envelop Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>