force-app/main/default/objects/Torc_Constants__c/fields/Google_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_Key__c</fullName>
    <label>Google Key</label>
    <type>TextArea</type>
</CustomField>