force-app/main/default/objects/Torc_Constants__c/fields/Hiring_Product__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Product__c</fullName>
    <label>Hiring Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>