force-app/main/default/objects/Torc_Constants__c/fields/Manual_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>Manual_Doc_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Doc Number</label>
    <type>Checkbox</type>
</CustomField>