force-app/main/default/objects/Torc_Constants__c/fields/Max_Payments__c.field-meta.xml
<CustomField>
    <fullName>Max_Payments__c</fullName>
    <label>Max Payments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>