force-app/main/default/objects/Torc_Constants__c/fields/Members_Account__c.field-meta.xml
<CustomField>
    <fullName>Members_Account__c</fullName>
    <label>Members Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>