force-app/main/default/objects/Torc_Constants__c/fields/MSA_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>MSA_Template_Id__c</fullName>
    <label>MSA Template Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>