force-app/main/default/objects/Torc_Constants__c/fields/Qubika_Account__c.field-meta.xml
<CustomField>
    <fullName>Qubika_Account__c</fullName>
    <label>Qubika Account</label>
    <length>40</length>
    <type>Text</type>
</CustomField>