force-app/main/default/objects/Torc_Constants__c/fields/RandstadAccountId__c.field-meta.xml
<CustomField>
    <fullName>RandstadAccountId__c</fullName>
    <label>RandstadAccountId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>