force-app/main/default/objects/Torc_Constants__c/fields/RD_Bullhorn_Job_Sync__c.field-meta.xml
<CustomField>
    <fullName>RD_Bullhorn_Job_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoke the API call for creating the RD Bullhorn Job in Torc Platform. If disabled, api call is not made</description>
    <inlineHelpText>Invoke the API call for creating the RD Bullhorn Job in Torc Platform. If disabled, api call is not made</inlineHelpText>
    <label>RD Bullhorn Job Sync</label>
    <type>Checkbox</type>
</CustomField>