force-app/main/default/objects/Torc_Constants__c/fields/Referral_Bonus_category__c.field-meta.xml
<CustomField>
    <fullName>Referral_Bonus_category__c</fullName>
    <label>Referral Bonus category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>