force-app/main/default/objects/Torc_Constants__c/fields/Run_Extension_Check__c.field-meta.xml
<CustomField>
    <fullName>Run_Extension_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run_Extension_Check</label>
    <type>Checkbox</type>
</CustomField>