force-app/main/default/objects/Torc_Constants__c/fields/Skip_Freelancer_Approval__c.field-meta.xml
<CustomField>
    <fullName>Skip_Freelancer_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Freelancer Approval</label>
    <type>Checkbox</type>
</CustomField>