force-app/main/default/objects/Torc_Constants__c/fields/Skip_Placement__c.field-meta.xml
<CustomField>
    <fullName>Skip_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Placement</label>
    <type>Checkbox</type>
</CustomField>