force-app/main/default/objects/Torc_Constants__c/fields/Slack_Wish_Channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_Wish_Channel__c</fullName>
    <label>Slack Wish Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>