force-app/main/default/objects/Torc_Constants__c/fields/Torc_Account__c.field-meta.xml
<CustomField>
    <fullName>Torc_Account__c</fullName>
    <label>Torc Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>