force-app/main/default/objects/Torc_Constants__c/fields/Torc_Record_type__c.field-meta.xml
<CustomField>
    <fullName>Torc_Record_type__c</fullName>
    <label>Torc Record type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>