force-app/main/default/objects/Torc_Constants__c/fields/Trolley_Payment_batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Payment_batch_Size__c</fullName>
    <label>Trolley Payment batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>