force-app/main/default/objects/Torc_Constants__c/fields/Wish_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Wish_Anniversary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wish Anniversary</label>
    <type>Checkbox</type>
</CustomField>