force-app/main/default/objects/Torc_Constants__c/fields/Wish_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Wish_Birthday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wish Birthday</label>
    <type>Checkbox</type>
</CustomField>